@@ -1,0 +1,2 @@
+Make context menu Cut and Copy work again when right-clicking within a
+selection.
